# workflow-core

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: enums.rs  lib.rs  seal.rs
src/: bitrigger.rs  enums.rs  id.rs  lib.rs  lookup.rs  task.rs  trigger.rs  utils.rs
src/channel/: mod.rs  oneshot.rs
src/sync/: mod.rs  oneshot.rs  reqresp.rs  task.rs
