[package]
name = "workflow-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
workflow-core-macros = { path = "macros/" }
cfg-if = "1.0.0"
borsh = "0.9.1"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
async-std = { version = "1.12.0", features = ['attributes'] }
futures = "0.3.21"
manual_future = "0.1.1"
thiserror = "1.0.0"
triggered = "0.1.2"
instant = { version ="0.1.12", features = ['wasm-bindgen'] }
bs58 = "0.4.0"
rand = "0.7.3"
serde = { version = "1.0.144" , features = ["derive"] }

[target.'cfg(not(any(target_arch = "bpf", target_arch = "wasm32")))'.dependencies]
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt'] }

[target.'cfg(target_arch = "bpf")'.dependencies]
solana-program = {path = "../solana/sdk/program"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
