[package]
name = "workflow-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-core"
keywords = ["wasm","browser","channel"]
categories = ["wasm"]
exclude = ["/.*", "/test","/macros"]
description = """
Utilities and curated re-exports for async rust native and browser development
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]

# workflow-core-macros = "0.1.0"
workflow-core-macros = { path = "macros/" }
cfg-if = "1.0.0"
borsh = "0.9.1"

[target.'cfg(not(target_os = "solana"))'.dependencies]
workflow-async-trait = { path = "../workflow-async-trait" }

async-std = { version = "1.12.0", features = ['attributes'] }
futures = "0.3.25"
manual_future = "0.1.1"
thiserror = "1.0.0"
triggered = "0.1.2"
instant = { version ="0.1.12", features = ['wasm-bindgen'] }
bs58 = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.144" , features = ["derive"] }

[target.'cfg(not(any(target_os = "solana", target_arch = "wasm32")))'.dependencies]
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt'] }

[target.'cfg(target_os = "solana")'.dependencies]
solana-program = "1.14.1"
# solana-program = {path = "../solana/sdk/program"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
